# san-citro

./: .env.example  .gitignore  CONTEXT.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
api/: dependencies.py  download_manager.py  main.py  models.py
api/routes/: __init__.py  diagnostics.py  downloads.py  history.py  search.py  settings.py
docs/adr/: 0001-telemetry-emit-boundary.md  0002-consolidate-download-telemetry.md  0003-python-telemetry-context-and-sinks.md  0004-download-library-tree.md  0005-archive-extraction-file-or-folder.md  0006-library-is-a-db-view-over-flat-storage.md  0007-archives-via-7zip-audiobooks-are-archive-packaged.md  0008-audiobook-chapter-model-and-ffmpeg.md  0009-audiobook-processing-lifecycle.md  0010-persistent-player-webcontentsview-overlay.md
docs/plans/: audiobook-media-subsystem.md  frontend-revamp.md
electron-app/: .gitignore  electron-builder.yml  package-lock.json  package.json
electron-app/python/: audiobook_queue.py  bridge.py  bridge_handlers.py  download_manager.py  san_citro.spec  telemetry_emitter.py
electron-app/resources/: icon.icns  splash.html
electron-app/scripts/: build-all.ps1  build-python.ps1  build-web.ps1  sync-binaries.ps1
electron-app/src/: ipc-handlers.ts  main.ts  media-protocol.test.ts  media-protocol.ts  player-preload.ts  player-view.ts  preload.ts  python-bridge.ts  splash.ts  tray.ts  types.ts  updater.ts
src/: annas_archive_tool.py  annas_config.example.json  audiobook_db.py  audiobook_processor.py  cli.py  config_manager.py  diagnostics.py  download_history.py  download_job.py  download_strategy.py  export.py  ingest_db.py  logger.py  media_tools.py  migrations.py  mock_data_generator.py  scraper.py  search_local.py  shutdown.py  utils.py
tests/: conftest.py  test_annas_archive.py  test_audiobook_db.py  test_audiobook_processor.py  test_audiobook_queue.py  test_bridge_handlers.py  test_cli.py  test_concurrent_downloads.py  test_config_manager.py  test_diagnostics.py  test_download_history.py  test_download_strategy.py  test_export.py  test_ingest_db.py  test_logger.py  test_media_tools.py  test_migrations.py  test_scraper.py  test_search_local.py  test_shutdown.py
web/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json
web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx
web/src/components/: app-header.tsx  app-sidebar.tsx  connection-indicator.tsx  telemetry-provider.tsx  titlebar-sync.tsx  update-banner.tsx
web/src/lib/: ab-testing.ts  api-client.ts  format.ts  frustration.ts  heatmap.ts  player-bridge.ts  session-recorder.ts  status.ts  supabase-config.ts  telemetry.ts  use-sse.ts
web/src/types/: index.ts
(+23 files in other folders)
