[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annas-archive-toolkit"
version = "0.1.0"
description = "A toolkit for searching and downloading from Anna's Archive using bulk metadata dumps."
requires-python = ">=3.11"
dependencies = [
    "requests~=2.31.0",
    "beautifulsoup4~=4.12.0",
    "zstandard~=0.21.0",
    "rich~=13.0.0",
    "tqdm~=4.65.0",
]

[project.optional-dependencies]
download = ["undetected-chromedriver~=3.5.0"]
dev = [
    "pytest~=7.4.0",
    "pytest-mock~=3.12.0",
    "undetected-chromedriver~=3.5.0",
]

[project.scripts]
annas-archive = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (can reduce readability)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM300"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# --- Mypy (type checker) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]
